Fix review issues: Java 8 compatibility, exception handling, and savepoint safety
1. Remove Thread.onSpinWait() (Java 9+) from TransactionTableRegion CAS spin loops
2. Replace List.of() (Java 9+) with Collections.emptyList() in PartitionCommitTracker
3. Add missing commitInFlight/partitionTracker/label cleanup in processMultiTableCommit
   exception handler to prevent stale state after commit failure
4. Wait for in-flight loads to complete before resetting coordinator during savepoint,
   preventing orphaned loads under the shared transaction label
5. Downgrade switchChunkForCommit log from INFO to DEBUG to reduce hot-path noise

https://claude.ai/code/session_01AWDkPAbx7zvmVJqmzL3i7M